public class IncomeTaxSquare extends Square {
    private int tax;

    private String name;
    IncomeTaxSquare(int tax){
        this.tax=tax;
    }

    public int getTax() {
        return this.tax;
    }
    public void landedOn(){

    }


}
