public class RegularSquare extends Square{

    RegularSquare(){

    }
    public void landedOn() {

    }
}
