@startuml

title __OBJECT-ORÝENTED-PROGRAMMÝNG---PROJECT's Class Diagram__\n

  namespace  {
    class Board {
    }
  }
  

  namespace  {
    class Die {
    }
  }
  

  namespace  {
    class IncomeTaxSquare {
    }
  }
  

  namespace  {
    class MonopolyGame {
    }
  }
  

  namespace  {
    class Player {
    }
  }
  

  namespace  {
    class RegularSquare {
    }
  }
  

  namespace  {
    abstract class Square {
    }
  }
  

  namespace  {
    class main {
    }
  }
  

  IncomeTaxSquare -up-|> Square
  MonopolyGame o-- Board : board
  Player o-- Square : square
  RegularSquare -up-|> Square


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
